Fixed hashing functionality